tests/snapshots/sdk_serialization_snapshots__gemini__ir_from_gemini_contents.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: ir
---
messages:
  - role: user
    content:
      - type: text
        text: What is Rust?
  - role: assistant
    content:
      - type: text
        text: A systems language.
