tests/snapshots/sdk_serialization_snapshots__gemini__request_minimal.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "gemini-2.5-pro",
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Hello"
        }
      ]
    }
  ]
}
