tests/snapshots/sdk_serialization_snapshots__gemini__request_with_tools.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "gemini-2.5-flash",
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Call the search tool"
        }
      ]
    }
  ],
  "tools": [
    {
      "functionDeclarations": [
        {
          "name": "search",
          "description": "Search docs",
          "parameters": {
            "properties": {
              "q": {
                "type": "string"
              }
            },
            "type": "object"
          }
        },
        {
          "name": "read_file",
          "description": "Read a file",
          "parameters": {
            "properties": {
              "path": {
                "type": "string"
              }
            },
            "type": "object"
          }
        }
      ]
    }
  ],
  "tool_config": {
    "functionCallingConfig": {
      "mode": "ANY",
      "allowedFunctionNames": [
        "search"
      ]
    }
  }
}
