tests/snapshots/sdk_serialization_snapshots__gemini__response_function_call.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "candidates": [
    {
      "content": {
        "role": "model",
        "parts": [
          {
            "functionCall": {
              "name": "get_weather",
              "args": {
                "location": "Tokyo"
              }
            }
          }
        ]
      },
      "finishReason": "STOP"
    }
  ],
  "usageMetadata": {
    "promptTokenCount": 15,
    "candidatesTokenCount": 12,
    "totalTokenCount": 27
  }
}
