tests/snapshots/sdk_serialization_snapshots__gemini__stream_event_text.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: event
---
{
  "candidates": [
    {
      "content": {
        "role": "model",
        "parts": [
          {
            "text": "Hello"
          }
        ]
      },
      "finish_reason": null
    }
  ],
  "usage_metadata": null
}
