tests/snapshots/sdk_serialization_snapshots__gemini__work_order_from_request.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "Explain ownership",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "google/gemini-2.5-pro",
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": 1024
  }
}
